Camino only - Bug 408533: Incremental find should not jump to the next match. r/sr=mento